# pettyscript

./: .gitignore  Cargo.toml  rustfmt.toml
cli/: Cargo.toml
cli/src/: main.rs
examples/: brute_force.pty  classes.pty  fizzbuzz.pty  for_loop.pty  fstring.pty  generics.pty  hello_world.pty  hi.pty  if_statement.pty  lexer.pty  literals.pty  sum_squares.pty  while_loop.pty
formatter/: Cargo.toml
formatter/src/: lib.rs
formatter/src/tests/: if_statement.pty  mod.rs
lib/: std.pty
macros/: Cargo.toml
macros/src/: lib.rs
parser/: Cargo.toml
parser/src/: binop.rs  expression.rs  lib.rs  statement.rs  tests.rs
src/: ast.rs  builtints.rs  bytecode.rs  codegen.rs  compile.rs  disassemble.rs  errors.rs  hir.rs  hir_codegen.rs  intern.rs  lex.rs  lexer.rs  main.rs  mir.rs  parse.rs  parser.rs  tests.rs  ty.rs  typck.rs
src/bytecode/: mod.rs  opcode.rs
src/vm/: mod.rs  value.rs  variable_stack.rs
tests/: array_literals.pty  arrays.pty  blocks.pty  comparisons.pty  enums.pty  fstrings.pty  generics.pty  impl_blocks.pty  int_base.pty  ints.pty  late_init.pty  logical_binary_operators.pty  maps.pty  parse_int.pty  recurse.pty  scopes.pty  str_char_eq.pty  str_literal.pty  strings.pty  structs.pty  tuples.pty  type_inference.pty  unary_ops.pty  variables.pty  zsts.pty
vm/: Cargo.toml
vm/src/: fn_args.rs  lib.rs  prelude.rs  tests.rs
vm/src/ast/: debug.rs  mod.rs  node.rs
vm/src/object/: bool.rs  custom.rs  float.rs  func.rs  int.rs  list.rs  mod.rs  null.rs  object_ext.rs  range.rs  raw_func.rs  string.rs
vm/src/run/: mod.rs
vm/src/stdlib/: mod.rs  (+1 more)
