[package]
name = "pettyscript"
version = "0.1.0"
edition = "2021"

[dependencies]
logos = "0.15.0"
miette = { version = "7.4.0", features = ["fancy"] }
thiserror = "2.0.11"
hashbrown = { version = "0.15.2", default-features = false }
rustc-hash = "2.1.0"
bstr = { version = "1.11.3", default-features = false }
macros = { path = "./macros" }
clap = { version = "4.5.27", features = ["derive"] }

[profile.release]
lto = "fat"
panic = "abort"
