[package]
name = "pettyscript"
version = "0.1.0"
edition = "2024"

[dependencies]
logos = "0.15.0"
miette = { version = "7.4.0", features = ["fancy"] }
thiserror = "2.0.11"
rustc-hash = "2.1.0"
macros = { path = "./macros" }
clap = { version = "4.5.27", features = ["derive"] }

[profile.release]
lto = "fat"
panic = "abort"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
cast_lossless = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
should_panic_without_expect = "allow"
unnecessary_wraps = "allow"
wildcard_imports = "allow"
